# IOSB-Task

./: CMakeLists.txt  Readme.md  exec
desc/: description.txt
include/: task.hpp
src/: task.cpp
